# cli

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  rust.yml  test.yml
docs/: index.md
docs/.vitepress/: config.mts
docs/commands/: commit.md  config.md
docs/guide/: intro.md
docs/zh/: index.md
docs/zh/commands/: commit.md  config.md
docs/zh/guide/: intro.md
src/: main.rs
src/commit/: mod.rs  types.rs
src/config/: liting.default.json  liting.default.toml  mod.rs
