[package]
name = "liting"
version = "0.1.0"
authors = ["liting-yes <luz.liting@gmail.com>"]
edition = "2021"
description = "A cli tool for improve efficiency"
readme = "README.md"
repository = "https://github.com/liting-yes/cli.git"
license = "MIT"
keywords = ["cli", "commit"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
inquire = "0.7.4"
